--- a/service/mentor-portal-client/public/index.html
+++ b/service/mentor-portal-client/public/index.html
@@ -6,7 +6,7 @@
 
 	<title>Mentor Portal</title>
 
-	<link rel='icon' type='image/png' href='/small_new_cropped_codingnomads_logo (2).png'>
+	<link rel='icon' type='image/png' href='/p-logo-favicon.png'>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 	<link rel='stylesheet' href='/build/bundle.css'>
 
